kustomize/overlays/canary/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: silly-demo-canary
  labels:
    app.kubernetes.io/name: silly-demo-canary
spec:
  selector:
    matchLabels:
      app: silly-demo-canary
  template:
    metadata:
      labels:
        app: silly-demo-canary
    spec:
      containers:
        - ports:
          - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          name: silly-demo-canary
          image: vfarcic/silly-demo:1.0.8
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
