kustomize/overlays/canary/route.yaml
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: silly-demo
  labels:
    app.kubernetes.io/name: silly-demo
spec:
  parentRefs:
    - kind: Gateway
      name: http
  hostnames:
    - silly-demo.34.102.168.52.nip.io
  rules:
    - matches:
        - headers:
          - type: Exact
            name: type
            value: canary
      backendRefs:
        - name: silly-demo-canary
          port: 8080
    - backendRefs:
        - name: silly-demo
          port: 8080
